@@ -15,24 +15,32 @@
  */
 @file:Suppress("FunctionName")
 
-import io.kotest.matchers.file.shouldExist
+import io.kotest.matchers.paths.shouldExist
 import io.kotest.matchers.shouldBe
 import org.gradle.testkit.runner.TaskOutcome
+import org.junit.jupiter.api.AfterEach
 import org.junit.jupiter.api.DisplayName
 import org.junit.jupiter.api.Test
 import org.junit.jupiter.api.TestInstance
 import utils.TestProjectBuilder
 import utils.basicBuildScript
-import java.io.File
 import javax.xml.parsers.DocumentBuilderFactory
+import kotlin.io.path.readText
 
 @TestInstance(TestInstance.Lifecycle.PER_METHOD)
 @DisplayName("Quality Tools Integration Tests")
 class QualityToolsIntegrationTest {
+    lateinit var builder: TestProjectBuilder
+
+    @AfterEach
+    fun cleanupTestProject() {
+        builder.cleanup()
+    }
+
     @Test
     @DisplayName("should execute the checkstyle with defaults")
     fun `execute checkstyle with defaults`() {
-        val testProject =
+        builder =
             TestProjectBuilder
                 .create("checkstyle-test")
                 .withVersionCatalog()
@@ -40,15 +48,15 @@ class QualityToolsIntegrationTest {
                 .withBuildGradle(basicBuildScript())
                 .withJavaSource()
 
-        val result = testProject.runGradleAndFail("checkstyleMain")
+        val result = builder.runGradleAndFail("checkstyleMain")
         result.task(":checkstyleMain")?.outcome shouldBe TaskOutcome.FAILED
 
-        val checkstyleXmlReport = File(testProject.projectDir, "build/reports/checkstyle/main.xml")
-        val checkstyleHtmlReport = File(testProject.projectDir, "build/reports/checkstyle/main.html")
+        val checkstyleXmlReport = builder.projectDir.resolve("build/reports/checkstyle/main.xml")
+        val checkstyleHtmlReport = builder.projectDir.resolve("build/reports/checkstyle/main.html")
         checkstyleXmlReport.shouldExist()
         checkstyleHtmlReport.shouldExist()
 
-        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(checkstyleXmlReport)
+        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(checkstyleXmlReport.toFile())
         val violations = document.getElementsByTagName("error")
 
         violations.length shouldBe 1
@@ -57,7 +65,7 @@ class QualityToolsIntegrationTest {
     @Test
     @DisplayName("should suppress the checkstyle violations")
     fun `checkstyle should skip violations due to suppressions`() {
-        val testProject =
+        builder =
             TestProjectBuilder
                 .create("checkstyle-suppress-test")
                 .withVersionCatalog()
@@ -79,13 +87,13 @@ class QualityToolsIntegrationTest {
                         """.trimIndent(),
                 )
 
-        val result = testProject.runGradle("checkstyleMain")
+        val result = builder.runGradle("checkstyleMain")
         result.task(":checkstyleMain")?.outcome shouldBe TaskOutcome.SUCCESS
 
-        val checkstyleXmlReport = File(testProject.projectDir, "build/reports/checkstyle/main.xml")
+        val checkstyleXmlReport = builder.projectDir.resolve("build/reports/checkstyle/main.xml")
         checkstyleXmlReport.shouldExist()
 
-        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(checkstyleXmlReport)
+        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(checkstyleXmlReport.toFile())
         val violations = document.getElementsByTagName("error")
 
         violations.length shouldBe 0
@@ -94,7 +102,7 @@ class QualityToolsIntegrationTest {
     @Test
     @DisplayName("should execute spotbugs with defaults")
     fun `execute spotbugs with defaults`() {
-        val testProject =
+        builder =
             TestProjectBuilder
                 .create("spotbugs-test")
                 .withVersionCatalog()
@@ -117,17 +125,17 @@ class QualityToolsIntegrationTest {
                         """.trimIndent(),
                 )
 
-        val result = testProject.runGradleAndFail("spotbugsMain")
+        val result = builder.runGradleAndFail("spotbugsMain")
         result.task(":spotbugsMain")?.outcome shouldBe TaskOutcome.FAILED
 
-        val spotbugsXmlReport = File(testProject.projectDir, "build/reports/spotbugs/main.xml")
-        val spotbugsHtmlReport = File(testProject.projectDir, "build/reports/spotbugs/main.html")
-        val spotbugsSarifReport = File(testProject.projectDir, "build/reports/spotbugs/main.sarif")
+        val spotbugsXmlReport = builder.projectDir.resolve("build/reports/spotbugs/main.xml")
+        val spotbugsHtmlReport = builder.projectDir.resolve("build/reports/spotbugs/main.html")
+        val spotbugsSarifReport = builder.projectDir.resolve("build/reports/spotbugs/main.sarif")
         spotbugsXmlReport.shouldExist()
         spotbugsHtmlReport.shouldExist()
         spotbugsSarifReport.shouldExist()
 
-        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(spotbugsXmlReport)
+        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(spotbugsXmlReport.toFile())
         val violations = document.getElementsByTagName("BugInstance")
 
         violations.length shouldBe 1
@@ -136,7 +144,7 @@ class QualityToolsIntegrationTest {
     @Test
     @DisplayName("should execute the spotbugs with exclusion filters")
     fun `execute spotbugs with exclude filters`() {
-        val testProject =
+        builder =
             TestProjectBuilder
                 .create("spotbugs-test")
                 .withVersionCatalog()
@@ -171,13 +179,13 @@ class QualityToolsIntegrationTest {
                         """.trimIndent(),
                 )
 
-        val result = testProject.runGradle("spotbugsMain")
+        val result = builder.runGradle("spotbugsMain")
         result.task(":spotbugsMain")?.outcome shouldBe TaskOutcome.SUCCESS
 
-        val spotbugsXmlReport = File(testProject.projectDir, "build/reports/spotbugs/main.xml")
+        val spotbugsXmlReport = builder.projectDir.resolve("build/reports/spotbugs/main.xml")
         spotbugsXmlReport.shouldExist()
 
-        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(spotbugsXmlReport)
+        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(spotbugsXmlReport.toFile())
         val violations = document.getElementsByTagName("BugInstance")
 
         violations.length shouldBe 0
@@ -186,7 +194,7 @@ class QualityToolsIntegrationTest {
     @Test
     @DisplayName("should execute pmd with defaults")
     fun `execute pmd with defaults`() {
-        val testProject =
+        builder =
             TestProjectBuilder
                 .create("pmd-test")
                 .withVersionCatalog()
@@ -212,15 +220,15 @@ class QualityToolsIntegrationTest {
                         """.trimIndent(),
                 )
 
-        val result = testProject.runGradleAndFail("pmdMain")
+        val result = builder.runGradleAndFail("pmdMain")
         result.task(":pmdMain")?.outcome shouldBe TaskOutcome.FAILED
 
-        val pmdXmlReport = File(testProject.projectDir, "build/reports/pmd/main.xml")
-        val pmdHtmlReport = File(testProject.projectDir, "build/reports/pmd/main.html")
+        val pmdXmlReport = builder.projectDir.resolve("build/reports/pmd/main.xml")
+        val pmdHtmlReport = builder.projectDir.resolve("build/reports/pmd/main.html")
         pmdXmlReport.shouldExist()
         pmdHtmlReport.shouldExist()
 
-        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(pmdXmlReport)
+        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(pmdXmlReport.toFile())
         val violations = document.getElementsByTagName("violation")
 
         println(pmdXmlReport.readText())
@@ -231,7 +239,7 @@ class QualityToolsIntegrationTest {
     @Test
     @DisplayName("should execute cpd with defaults")
     fun `execute cpd with defaults`() {
-        val testProject =
+        builder =
             TestProjectBuilder
                 .create("cpd-test")
                 .withVersionCatalog()
@@ -288,15 +296,81 @@ class QualityToolsIntegrationTest {
                         """.trimIndent(),
                 )
 
-        val result = testProject.runGradleAndFail("cpdCheck")
+        val result = builder.runGradleAndFail("cpdCheck")
         result.task(":cpdCheck")?.outcome shouldBe TaskOutcome.FAILED
 
-        val cmdXmlReport = File(testProject.projectDir, "build/reports/cpd/cpdCheck.xml")
-        cmdXmlReport.shouldExist()
+        val cpdXmlReport = builder.projectDir.resolve("build/reports/cpd/cpdCheck.xml")
+        cpdXmlReport.shouldExist()
 
-        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(cmdXmlReport)
+        val document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(cpdXmlReport.toFile())
         val violations = document.getElementsByTagName("duplication")
 
         violations.length shouldBe 1
     }
+
+//    @Test
+//    @DisplayName("should execute Jacoco with defaults")
+//    fun `execute jacoco with defaults`() {
+//        builder =
+//            TestProjectBuilder
+//                .create("jacoco-test")
+//                .withVersionCatalog()
+//                .withSettingsGradle()
+//                .withGradleProperties(
+//                    mapOf(
+//                        "org.gradle.jvmargs" to
+//                            "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED " +
+//                            "--add-opens=java.base/java.lang=ALL-UNNAMED " +
+//                            "--add-opens=java.base/java.io=ALL-UNNAMED " +
+//                            "--add-opens=java.base/java.util=ALL-UNNAMED",
+//                    ),
+//                ).withBuildGradle(
+//                    """
+//                    plugins {
+//                        java
+//                        id("io.github.aaravmahajanofficial.jenkins-gradle-convention-plugin")
+//                    }
+//
+//                    dependencies {
+//                        testImplementation("org.junit.jupiter:junit-jupiter:5.13.4")
+//                    }
+//
+//                    tasks.test {
+//                        useJUnitPlatform()
+//
+//                        jvmArgs(
+//                            "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
+//                            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+//                            "--add-opens=java.base/java.io=ALL-UNNAMED",
+//                            "--add-opens=java.base/java.util=ALL-UNNAMED"
+//                        )
+//                    }
+//
+//                    jenkinsConvention {
+//                        quality {
+//                            jacoco {
+//                                minimumCodeCoverage = 0.5
+//                            }
+//                        }
+//                    }
+//
+//                    """.trimIndent(),
+//                ).withJavaSource()
+//                .withTestSource()
+//
+//        val result = builder.runGradle("test", "jacocoTestReport", "jacocoTestCoverageVerification")
+//        result.task("test")?.outcome shouldBe TaskOutcome.SUCCESS
+//        result.task("jacocoTestReport")?.outcome shouldBe TaskOutcome.SUCCESS
+//        result.task("jacocoTestCoverageVerification")?.outcome shouldBe TaskOutcome.SUCCESS
+//
+//        val jacocoXmlReport = builder.projectDir.resolve("build/reports/jacoco/test/jacocoTestReport.xml")
+//        val jacocoHtmlReport = builder.projectDir.resolve("build/reports/jacoco/test/html/index.html")
+//        val jacocoCsvReport = builder.projectDir.resolve("build/reports/jacoco/test/jacocoTestReport.csv")
+//
+//        println(jacocoXmlReport.readText())
+//
+//        jacocoXmlReport.shouldExist()
+//        jacocoHtmlReport.shouldExist()
+//        jacocoCsvReport.shouldExist()
+//    }
 }
